Fixed some xDueDiligence code issues

--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
+<!--suppress CheckTagEmptyBody -->
 <html lang="en">
 
 <head>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
 
   <title>Due Diligence process quantified</title>
 
@@ -43,7 +42,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="./img/logo-xduediligence.svg"></a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img alt="xDueDeligence" src="img/logo-xduediligence.svg"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
@@ -97,34 +96,31 @@
     </div>
   </header>
 
-<section class="projects-section mt-5">
-   <div class="container">
-    <div class="row text-center numbers mt-5">
-          <div class="col-lg-3">
-          <div class="counter">
-      <h2 class="timer count-title count-number" data-to="14415" data-speed="2000"></h2>
-       <p class="count-text ">Users</p>
+  <div class="row text-center numbers mt-5">
+    <div class="col-lg-3">
+      <div class="counter">
+        <h2 class="timer count-title count-number" data-to="14415" data-speed="2000"></h2>
+        <p class="count-text ">Users</p>
+      </div>
     </div>
-          </div>
-              <div class="col-lg-3">
-               <div class="counter">
-      <h2 class="timer count-title count-number" data-to="387" data-speed="2000"></h2>
-      <p class="count-text ">Questionnaires</p>
+    <div class="col-lg-3">
+      <div class="counter">
+        <h2 class="timer count-title count-number" data-to="387" data-speed="2000"></h2>
+        <p class="count-text ">Questionnaires</p>
+      </div>
     </div>
-              </div>
-              <div class="col-lg-3">
-                  <div class="counter">
-      <h2 class="timer count-title count-number" data-to="80" data-speed="2000"></h2>
-      <p class="count-text ">Consultations and workshops</p>
-    </div></div>
-              <div class="col-lg-3">
-              <div class="counter">
-      <h2 class="timer count-title count-number" data-to="127" data-speed="2000"></h2>
-      <p class="count-text ">Satisfied customers</p>
+    <div class="col-lg-3">
+      <div class="counter">
+        <h2 class="timer count-title count-number" data-to="80" data-speed="2000"></h2>
+        <p class="count-text ">Consultations and workshops</p>
+      </div></div>
+    <div class="col-lg-3">
+      <div class="counter">
+        <h2 class="timer count-title count-number" data-to="127" data-speed="2000"></h2>
+        <p class="count-text ">Satisfied customers</p>
+      </div>
     </div>
-              </div>
-         </div>
-</section>
+  </div>
 
   <section id="claime">
     <div class="container">
@@ -133,7 +129,6 @@
           <h2 class="mt-0">Agile organisation<br> doesn't look like this</h2>
         </div>
       </div>
-    </div>
     </div>
   </section>
 
@@ -313,20 +308,20 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 text-center">
             <div class="mt-5">
-              <img src="img/team.svg">
+              <img alt="team" src="img/team.svg">
               <h3 class="">Get to know your team</h3>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
             <div class="mt-5">
-              <img src="img/insight.svg">
+              <img alt="Insight" src="img/insight.svg">
               <h3 class="">Insight that drives change</h3>
 
             </div>
           </div>
           <div class="col-lg-4 col-md-6 text-center">
             <div class="mt-5">
-              <img src="img/potential.svg">
+              <img alt="Potential" src="img/potential.svg">
               <h3 class="">Help everyone in your organisation reach their full potential</h3>
 
             </div>
@@ -359,16 +354,19 @@
               <div class=col-md-6>
                 <div class=form-group><input class=form-control name=name autocomplete=off id=Name placeholder=Name>
                 </div>
+                <label for="Name"></label>
               </div>
               <div class=col-md-6>
                 <div class=form-group><input type=email class=form-control name=email autocomplete=off id=email
                     placeholder=E-mail></div>
+                <label for="email"></label>
               </div>
             </div>
             <div class=row>
               <div class=col-md-12>
                 <div class=form-group><textarea class="form-control textarea" rows=3 name=message id=Message
                     placeholder=Message></textarea></div>
+                <label for="Message"></label>
               </div>
             </div>
             <div class=row>
@@ -463,12 +461,12 @@
           <ul class="list-inline mb-0">
             <li class="list-inline-item mr-3">
               <a href="#page-top">
-                <img src="img/facebook.svg">
+                <img alt="Facebook" src="img/facebook.svg">
               </a>
             </li>
             <li class="list-inline-item mr-3">
               <a href="#page-top">
-                <img src="img/twitter.svg">
+                <img alt="Twitter" src="img/twitter.svg">
               </a>
             </li>
           </ul>
@@ -489,7 +487,7 @@
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
-        <iframe width="100%" height="446px" src="https://www.youtube.com/embed/DF_Iq4yQ54c" frameborder="0"
+        <iframe width="100%" height="446px" src="https://www.youtube.com/embed/DF_Iq4yQ54c"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
