Our process section layout

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -434,76 +434,41 @@ TopMonks - Software development partner for your business
 </section>
 
 <link rel="stylesheet" href="/stylesheets/hp/funnel.css">
-<!--<section class="steps">
+<section class="product">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>You will love working with us</h2>
+        <h2>Our process is simple but effective</h2>
       </div>
-      <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-      </div>
-      <div
-        class="steps__step step_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Customer care</h3>
-        <p>During our co-operation, we’ll keep you in the loop. We’ll assign you a person who will be always happy to
-          explain everything, so that we could find the best solution together.</p>
-      </div>
-      <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-      </div>
-      <div
-        class="steps__step step_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Planning and research</h3>
-        <p>We explore the market possibilities and verify our ideas and thoughts. The product and its development are
-          not based on feelings, but data and experience.</p>
-      </div>
-      <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-      </div>
-      <div
-        class="steps__step step_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Design</h3>
-        <p>Design breathes life into the product. We’ll make sure that your application is intuitive and that the end
-          users will love it.</p>
-      </div>
-      <div
-        class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-8-desktop">
-      </div>
-      <div
-        class="steps__step step_4 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Development</h3>
-        <p>Rapid development doesn’t necessarily save time and money; it’s quite the other way round. We don’t start
-          developing products without thinking; we look for the best solution.</p>
-      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-bgnd-wrapper"></div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <ol class="steps">
+        <li
+          class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h3>Customer care</h3>
+          <p>During our co-operation, we’ll keep you in the loop. We’ll assign you a person who will be always happy to
+            explain everything, so that we could find the best solution together.</p>
+        </li>
+        <li
+          class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h3>Planning&nbsp;and&nbsp;research</h3>
+          <p>We explore the market possibilities and verify our ideas and thoughts. The product and its development are
+            not based on feelings, but data and experience.</p>
+        </li>
+        <li
+          class="steps__step design mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h3>Design</h3>
+          <p>Design breathes life into the product. We’ll make sure that your application is intuitive and that the end
+            users will love it.</p>
+        </li>
+        <li
+          class="steps__step development mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+          <h3>Development</h3>
+          <p>Rapid development doesn’t necessarily save time and money; it’s quite the other way round. We don’t start
+            developing products without thinking; we look for the best solution.</p>
+        </li>
+      </ol>
     </div>
-  </div>
-</section>-->
-
-<section class="product">
-  <div class="mdc-layout-grid steps tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div
-        class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Customer care</h3>
-        <p>During our co-operation, we’ll keep you in the loop. We’ll assign you a person who will be always happy to
-          explain everything, so that we could find the best solution together.</p>
-      </div>
-      <div
-        class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Planning and research</h3>
-        <p>We explore the market possibilities and verify our ideas and thoughts. The product and its development are
-          not based on feelings, but data and experience.</p>
-      </div>
-      <div
-        class="steps__step design mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Design</h3>
-        <p>Design breathes life into the product. We’ll make sure that your application is intuitive and that the end
-          users will love it.</p>
-      </div>
-      <div
-        class="steps__step development mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Development</h3>
-        <p>Rapid development doesn’t necessarily save time and money; it’s quite the other way round. We don’t start
-          developing products without thinking; we look for the best solution.</p>
-      </div>
     </div>
   </div>
 </section>
