topmonks.cz version hp "our process" section update

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -430,79 +430,42 @@
 </section>
 
 <link rel="stylesheet" href="/stylesheets/hp/funnel.css">
-<!--<section class="steps">
+<section class="product">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Náš proces je jednoduchý ale efektivní</h2>
+        <h2>Náš proces je jednoduchý, ale efektivní</h2>
       </div>
-      <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-      </div>
-      <div
-        class="steps__step step_1 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>PÉČE O ZÁKAZNÍKY</h3>
-        <p>Po celou dobu spolupráce se staráme o&nbsp;to, abyste byli v&nbsp;obraze.
-Přidělíme vám člověka, který vám vždy vše ochotně vysvětlí, abyste
-společně našli nejlepší řešení.</p>
-      </div>
-      <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-      </div>
-      <div
-        class="steps__step step_2 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>PLÁNOVÁNÍ A&nbsp;PRŮZKUM</h3>
-        <p>Zkoumáme možnosti trhu a ověřujeme nápady a myšlenky. Produkt a jeho
-vývoj nestavíme na pocitech, ale na datech a zkušenostech.</p>
-      </div>
-      <div class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-      </div>
-      <div
-        class="steps__step step_3 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>Design</h3>
-        <p>Design vdechne produktu život. Zajistíme, aby byla vaše aplikace
-intuitivní a koncoví uživatelé si ji zamilovali.</p>
-      </div>
-      <div
-        class="hidden-box mdc-layout-grid__cell mdc-layout-grid__cell--span-0-phone mdc-layout-grid__cell--span-0-tablet mdc-layout-grid__cell--span-8-desktop">
-      </div>
-      <div
-        class="steps__step step_4 mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-desktop">
-        <h3>VÝVOJ</h3>
-        <p>Rychlý vývoj nemusí nutně znamenat ušetření času a financí. Právě
-naopak. Nezačínáme bezmyšlěnkovitě vyvíjet, ale hledáme ta nejlepší
-řešení konkrétně pro váš produkt.</p>
-      </div>
-    </div>
-  </div>
-</section>-->
-
-<section class="product">
-  <div class="mdc-layout-grid steps tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
-      <div
-        class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>PÉČE O ZÁKAZNÍKY</h3>
-        <p>Po celou dobu spolupráce se staráme o&nbsp;to, abyste byli v&nbsp;obraze.
-          Přidělíme vám člověka, který vám vždy vše ochotně vysvětlí, abyste
-          společně našli nejlepší řešení.</p>
-      </div>
-      <div
-        class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>PLÁNOVÁNÍ A&nbsp;PRŮZKUM</h3>
-        <p>Zkoumáme možnosti trhu a ověřujeme nápady a myšlenky. Produkt a jeho
-          vývoj nestavíme na pocitech, ale na datech a zkušenostech.</p>
-      </div>
-      <div
-        class="steps__step design mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>Design</h3>
-        <p>Design vdechne produktu život. Zajistíme, aby byla vaše aplikace
-          intuitivní a koncoví uživatelé si ji zamilovali.</p>
-      </div>
-      <div
-        class="steps__step development mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
-        <h3>VÝVOJ</h3>
-        <p>Rychlý vývoj nemusí nutně znamenat ušetření času a financí. Právě
-          naopak. Nezačínáme bezmyšlěnkovitě vyvíjet, ale hledáme ta nejlepší
-          řešení konkrétně pro váš produkt.</p>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 tm-bgnd-wrapper"></div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <ol class="steps">
+          <li
+            class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+            <h3>PÉČE O ZÁKAZNÍKY</h3>
+            <p>Po celou dobu spolupráce se staráme o&nbsp;to, abyste byli v&nbsp;obraze.
+              Přidělíme vám člověka, který vám vždy vše ochotně vysvětlí, abyste
+              společně našli nejlepší řešení.</p>
+          </li>
+          <li
+            class="steps__step mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+            <h3>PLÁNOVÁNÍ A&nbsp;PRŮZKUM</h3>
+            <p>Zkoumáme možnosti trhu a ověřujeme nápady a myšlenky. Produkt a jeho
+              vývoj nestavíme na pocitech, ale na datech a zkušenostech.</p>
+          </li>
+          <li
+            class="steps__step design mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+            <h3>Design</h3>
+            <p>Design vdechne produktu život. Zajistíme, aby byla vaše aplikace
+              intuitivní a koncoví uživatelé si ji zamilovali.</p>
+          </li>
+          <li
+            class="steps__step development mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-6-desktop">
+            <h3>VÝVOJ</h3>
+            <p>Rychlý vývoj nemusí nutně znamenat ušetření času a financí. Právě
+              naopak. Nezačínáme bezmyšlěnkovitě vyvíjet, ale hledáme ta nejlepší
+              řešení konkrétně pro váš produkt.</p>
+          </li>
+        </ol>
       </div>
     </div>
   </div>
