--- a/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
+++ b/www.topmonks.com/src/html/case-studies/go-real-europe/index.html
@@ -15,6 +15,8 @@
 
   h3.h3_gorealeurope {
     width: 940px;
+    margin: 0 auto;
+    line-height: 1.5em;
   }
 
   .tm-case-study__section--collecting {
@@ -52,12 +54,6 @@
 
   .video {
     text-align: center;
-  }
-
-  @media screen and (max-width: 839px) {
-    .tm-layout-wrapper--mobile {
-      padding: 0 1em;
-    }
   }
 
   @media screen and (min-width: 840px) {
