--- a/www.xduediligence.com/src/html/index.html
+++ b/www.xduediligence.com/src/html/index.html
@@ -33,7 +33,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <!-- Theme CSS - Includes Bootstrap -->
-  <link href="stylesheets/creative.css" rel="stylesheet">
+  <link rel="stylesheet" href="stylesheets/creative.css">
 
 </head>
 
