--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -6,6 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="Description" content="TopMonks Case Study - XIXOIO">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" src="./assets/semantic.min.css">
   <link rel="stylesheet" href="/stylesheets/xixoio.css">
