XIXOIO case study na blockchain web

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -163,6 +163,8 @@
                     strong compliance with time requirements allowed us to launch product on time and without
                     complications.</em>
                 </p>
+                <p class="case-study_link"><a href="https://www.topmonks.com/case-studies/xixoio/">SHOW CASE STUDY</a>
+                </p>
               </blockquote>
             </div>
           </div>
