--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -1257,7 +1257,7 @@
       </div>
 
       <div class="last-diamond left-float mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <p class="contracts_title">Contracts</p>
+        <p class="contracts_title">Release</p>
         <p class="work_shadow-box">3. 12. 2019</p>
       </div>
     </div>
