Removing Berenika's contacts

--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -551,9 +551,7 @@
                  src="https://insight.topmonks.com/avatar/berenika-alexandre"
                  onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
                  width="112" height="112"></div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8"><p><span itemprop="name">Berenika Alexandre</span><br><a
-            itemprop="telephone" href="tel:+14155256313">+1-415-525-6313</a><br><a itemprop="email"
-                                                                                   href="mailto:berenika.alexandre@topmonks.com">berenika.alexandre@topmonks.com</a>
+          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8"><p><span itemprop="name">Berenika Alexandre</span>
           </p></div>
         </div>
       </div>
