--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -544,15 +544,17 @@
         class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person"><h3><b>US Sales</b></h3>
         <p class="box_text-about">Jsme otevření novým příležitostem a zkušenostem i&nbsp;v&nbsp;USA. Pokud pro
-          nás máte zajímavý projekt, kontaktujte Bereniku.</p>
+          nás máte zajímavý projekt, kontaktujte Simonu.</p>
         <div class="mdc-layout-grid__inner">
           <div class="person--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Berenika Alexandre"
-                 src="https://insight.topmonks.com/avatar/berenika-alexandre"
+            <img alt="[foto] Simona Zábržová"
+                 src="https://insight.topmonks.com/avatar/simona-zabrzova"
                  onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'"
                  width="112" height="112"></div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8"><p><span itemprop="name">Berenika Alexandre</span>
-          </p></div>
+          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+            <p><span itemprop="name">Simona Zábržová</span><br><a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
+              <a itemprop="email" href="mailto:simona.zabrzova&#64;topmonks.com">simona.zabrzova@​topmonks.com</a></p>
+          </div>
         </div>
       </div>
 
