Cryptex24 to 24Cryptex

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -512,7 +512,7 @@ TopMonks - Software development partner for your business
             professional design. We certainly recommend him further.
           </blockquote>
           <hr class="line-between_grey">
-          <figcaption><b>Karel Dostál</b><br>Cryptex24</figcaption>
+          <figcaption><b>Karel Dostál</b><br>24Cryptex</figcaption>
         </div>
         <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
