--- a/www.topmonks.cz/src/html/index.html
+++ b/www.topmonks.cz/src/html/index.html
@@ -513,7 +513,7 @@
             doporučíme&nbsp;dál.
           </blockquote>
           <hr class="line-between_grey">
-          <figcaption><b>Karel Dostál</b><br>Cryptex24</figcaption>
+          <figcaption><b>Karel Dostál</b><br>24Cryptex</figcaption>
         </div>
         <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
           <svg width="28" height="25" viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg">
