--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -527,7 +527,7 @@ TopMonks - Software development partner for your business
             architecture.
           </blockquote>
           <hr class="line-between_grey">
-          <figcaption><b>Nataliya Rozhok</b><br>DEBNK</figcaption>
+          <figcaption><b>Patrik Tjokorda</b><br>DEBNK</figcaption>
         </div>
       </div>
     </div>
