Xixoio web - header

--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -54,11 +54,11 @@
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-9-desktop">
         <nav id="navigation" class="tm-menu" style="">
           <ul class="tm-menu__list">
-            <li><a style="padding: 4px 14px;" href="#about">ABOUT XIXOIO</a></li>
-            <li><a style="padding: 4px 14px;" href="#infrastructure">DEVELOPMENT</a></li>
-            <li><a style="padding: 4px 14px;" href="#implementation">HOW WE WORK</a></li>
-            <li><a style="padding: 4px 14px;" href="#our-work">TIMELINE</a></li>
-            <li><a style="padding: 4px 14px;" href="https://blockchain.topmonks.com/">BLOCKCHAIN</a></li>
+            <li><a href="#about">ABOUT XIXOIO</a></li>
+            <li><a href="#infrastructure">DEVELOPMENT</a></li>
+            <li><a href="#implementation">HOW WE WORK</a></li>
+            <li><a href="#our-work">TIMELINE</a></li>
+            <li><a href="https://blockchain.topmonks.com/">BLOCKCHAIN</a></li>
           </ul>
         </nav>
       </div>
