xixoio - mobile devices - nav bar

--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<header class="tm-app-bar" style="position: static">
+<header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
       <div
