Profi Option - html, css

--- a/www.topmonks.com/src/html/case-studies/profi-option/index.html
+++ b/www.topmonks.com/src/html/case-studies/profi-option/index.html
@@ -16,7 +16,7 @@
 <section class="intro">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
-      <div class="text-center title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+      <div class="text-center intro_main-text title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h1>24Cryptex.com</h1>
         <p>24Cryptex is the trading platform with crypto assets based on binary options.
           Blockchain team of TopMonks delivered backend and frontend solution, design of
@@ -128,7 +128,7 @@
   </div>
 </section>
 
-<section class="">
+<section class="analysis">
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="text-center title_box mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -142,18 +142,43 @@
   </div>
 </section>
 
-<section class="">
+<section class="stylization">
   <div class="mdc-layout-grid">
     <div class="box mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2>Colors &amp; Typography</h2>
-        <p>Main color</p>
-        <p>Brand color</p>
-        <p>Success</p>
-        <p>Warning</p>
-        <p>Error</p>
+        <h3>Colors &amp; Typography</h3>
       </div>
-      <hr>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+      </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <img
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
+          Main color
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <img
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
+          Brand color
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <img
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
+          Success
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <img
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
+          Warning
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2">
+          <img
+            src="https://res.cloudinary.com/topmonks/image/upload/v1556633593/topmonks.com/profi-option/color_black.svg">
+          Error
+        </div>
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-1">
+      </div>
+
+
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <p>Landing page headline / 48px Extra bold</p>
         <h2>Active investments</h2>
