XIXOIO - logo refering to blockchain.tm.com

--- a/www.topmonks.com/src/html/case-studies/xixoio/index.html
+++ b/www.topmonks.com/src/html/case-studies/xixoio/index.html
@@ -26,7 +26,7 @@
       </div>
       <div
         class="logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
-        <a class="tm-logo" href="/" title="Go to homepage">
+        <a class="tm-logo" href="https://blockchain.topmonks.com/" title="Go to Blockchain.topmonks.com">
           <svg class="monk" width="26px" height="32px" viewBox="0 0 30 36" version="1.1"
                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g transform="translate(-268.000000, -13.000000)" fill-rule="nonzero">
@@ -60,7 +60,6 @@
             <li><a href="#infrastructure">DEVELOPMENT</a></li>
             <li><a href="#implementation">HOW WE WORK</a></li>
             <li><a href="#our-work">TIMELINE</a></li>
-            <li><a href="https://blockchain.topmonks.com/">BLOCKCHAIN</a></li>
           </ul>
         </nav>
       </div>
